* Changelog

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.7...dev][Unreleased]]

*** Added
*** Changed
*** Deprecated
*** Removed
*** Fixed

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.6...v0.3.7][v0.3.7]] - 2023-08-15

*** Added
+ *tetragono*: Add support to calculate deviation of the observer set as a whole, which is useful since many observables
  are the summation of several local observables.
+ *tetragono*: Add arguments support for =gm_conf_create= and =ap_conf_create= in tetragono shell.
+ *tetragono*: Add a member dict called =attribute= to =AbstractState=, which may contain customed data used by user.
*** Changed
+ *tetragono*: =save_result= accept another parameter, which is the total result of the whole observers set. Its
  signature is =state=, =result=, =whole_result= and =step= now.
+ *tetraku*: Change the defnition of x/y/z link in kitaev model. The bond inside one tensor is z link now.
+ *tetragono*: =gm_run(_g)= will now return/yield all the measurement result instead of energy only.
*** Deprecated
+ *tetragono*: The previous signature of =save_result=: =state=, =result= and =step= is deprecated.
*** Removed
+ *tetragono*: Remove the deprecated function =natural_gradient= and the deprecated paramter =metric_inverse_epsilon=
  for =gm_run=.

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.5...v0.3.6][v0.3.6]] - 2023-05-26

*** Added
+ *TAT.hpp*: Add =clear_fermi_symmetry= for tensor with fermionic symmetry, which convert the tensor to the simplest
  fermionic tensor, tensor with parity symmetry.
+ *TAT.py*: Add python binding for =clear_fermi_symmetry=.
+ *tetragono*: Check whether the state is =None= when dump the state to file to avoid overwriting file by mistake.
+ *tetragono*: Add =gm_clear_symmetry= for sampling lattice.
+ *tetragono*: Add =gm_run_g= and =ap_run_g= for middle level API. These are generators, which yield the energy of the
  state before gradient descent after every gradient step.