@@ -29,7 +29,7 @@ def measurement(state):
     return result
 
 
-def save_result(state, result, step):
+def save_result(state, result, whole_result):
     n = [
         result[
             (l1, l2, orbit),
