@@ -58,6 +58,6 @@ def measurement(state):
     return result
 
 
-def save_result(state, result, step):
+def save_result(state, result, whole_result):
     with open("singlet-2row.log", "a", encoding="utf-8") as file:
         print(result, file=file)
