@@ -32,6 +32,6 @@ def measurement(state):
     }
 
 
-def save_result(state, result, step):
+def save_result(state, result, whole_result):
     with open("nn.log", "a", encoding="utf-8") as file:
         print(result, file=file)
